<resources>
    <string name="app_name">Community_jump_trainer</string>

    <!-- navigation -->
    <string name="title_home">Home</string>
    <string name="title_trainingsPlans">Plans</string>
    <string name="title_settings">Settings</string>

    <string name="centimeters_short">cm</string>
    <string name="inches_short">inches</string>
    <string name="reach_height_input_hint">Your reach in %1$s</string>
    <string name="reach_height_input_error">Invalid Input</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <!-- Home -->
    <string name="start_current_trainingsPlan">Start</string>
    <string name="info_current_trainingsPlan">Info</string>
    <string name="vertical_progress_title">Jump height</string>
    <string name="vertical_progress_add">Add</string>
    <string name="vertical_progress_input_hint">Enter your vertical reach</string>
    <string name="vertical_progress_info_hint">Info</string>
    <string name="vertical_progress_info_show_youtube_video">This diagram tracks your vertical jump progress. Do you want to watch a video explaining how to measure your vertical jump correctly?</string>
    <string name="add_current_trainings_plan_text">Select a trainings plan and start your training.</string>
    <string name="add_current_trainings_plan_Select">Select</string>
    <string name="select_current_trainingsplan_title">Select a trainings plan</string>

    <string name="exercise_info">Info</string>
    <string name="exercise_sets">Sets: %1$s</string>
    <string name="exercise_equipment">Equipment</string>
    <string name="exercise_equipment_none">None</string>
    <string name="exercise_repetitions">Repetition: %1$s</string>
    <string name="exercise_repetitions_standard_as_much">Repetition: As much as possible per set</string>
    <string name="exercise_category">Category:</string>
    <string name="time_exercise_prepare">Get ready!</string>
    <string name="time_exercise_start">Start</string>
    <string name="time_exercise_pause">Pause</string>
    <string name="time_exercise_resume">Resume</string>
    <string name="time_exercise_hold_time">Time: %1$s</string>
    <string name="minutes_short">min</string>
    <string name="time_exercise_hold_time_as_much">Hold time: As long as possible per set</string>

    <!-- current_trainingsplan_menu -->
    <string name="remove">Remove</string>

    <!-- Preferences -->
    <string name="preferences_home_screen">Home screen</string>
    <string name="preferences_show_vertical_progress_title">Show vertical progress</string>
    <string name="preferences_training_title">Training</string>
    <string name="preferences_trainingsPlan_preparationTime">Preparation time</string>
    <string name="preferences_equipment_title">Available equipment</string>
    <string name="preferences_equipment_home">Home</string>
    <string name="preferences_equipment_gym">Gym</string>
    <string name="preferences_unit_local_title">Measurement system</string>

    <!-- TrainingsPlanDetail-->
    <string name="detail_add_trainings_plan">Add Trainings plan</string>
    <string name="detail_exercises_title">Exercises</string>
    <string name="detail_exercises_plyometric">Plyometric:</string>
    <string name="detail_exercises_strength">Strength:</string>
    <string name="detail_exercises_stretch">Stretch:</string>
    <string name="detail_exercises_warmup">Warmup:</string>

</resources>
