<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_exercises_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_margin="@dimen/card_margins_content"/>

    <View style="@style/Divider"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins_content">

        <TextView
            android:id="@+id/txt_warmup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_exercises_warmup"
            android:textColor="@color/colorExerciseWarmup"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/txt_warmup_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margins_content"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins_content">

        <TextView
            android:id="@+id/txt_stretch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_exercises_stretch"
            android:textColor="@color/colorExerciseStretch"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/txt_stretch_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margins_content"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins_content">

        <TextView
            android:id="@+id/txt_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_exercises_strength"
            android:textColor="@color/colorExerciseStrength"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/txt_strength_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margins_content"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margins_content">

        <TextView
            android:id="@+id/txt_plyometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_exercises_plyometric"
            android:textColor="@color/colorExercisePlyometric"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/txt_plyometric_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margins_content"/>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>