<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:background="@color/background">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true"
        style="@style/CardViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_margin="@dimen/card_margins_content"
                    android:text="@string/select_current_trainingsplan_title"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/inner_card_margins">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_current_trainings_plan_text"/>
            </LinearLayout>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/add_current_trainings_plan_Select"/>
            </android.support.v7.widget.LinearLayoutCompat>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>